# yada

./: ChangeLog  INSTALL  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  install-sh
contrib/: yada.ebuild  yada.spec.in
docs/: Makefile.in  doxygen.conf.in  version.texi.in  yada.3  yada.html  yada.info  yada.texi  yada.trx.3
src/: Makefile.in  _yada.h  common.c  common.h  prepexec.c  yada.c  yada.h  yada_mysql.c  yada_oracle.c  yada_pgsql.c  yada_sqlite3.c
test/: Makefile.in  yada_test.c
yadac/: Makefile.in  test.c  test.yada  testruct.h  yadac.c  yadac.h  yadac.lex  yadac.lex.c  yadac.lex.h  yadac.test  yadac.y  yadac.y.c  yadac.y.h
